k8s/20-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phello
  namespace: mmartin
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.phello: regexp:^((?!tmp).)*$
spec:
  selector:
    matchLabels:
      app: phello
  template:
    metadata:
      labels:
        app: phello
    spec:
      containers:
      - name: phello
        image: gitlab.bxsoft.com:4567/mmartin/phello:flux
