k8s/20-service.yml
apiVersion: v1
kind: Service
metadata:
  name: phello
  namespace: mmartin
spec:
  ports:
    - name: hello
      port: 8013
      protocol: TCP
  selector:
    app: phello
