k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: LoadBalancer
  ports:
    - name: hello
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: hello
