k8s/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phello
  namespace: mmartin
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - phello-stage.gitlab.bxsoft.com
    secretName: tls-gitlab-bxsoft
  rules:
  - host: phello-stage.gitlab.bxsoft.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phello
          servicePort: 8013
